[package]
name = "webinfo"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "webinfo"
path = "src/bin/webinfo.rs"

[dependencies]
anyhow = "1.0.99"
assert_fs = "1.1.3"
clap = { version = "4.5.47", features = ["derive"] }
csv = "1.3.1"
futures = "0.3.31"
hickory-proto = "0.25.2"
hickory-resolver = "0.25.2"
indicatif = "0.18.0"
ip2asn = { version = "0.1.2", features = ["fetch"] }
ip_network = { version = "0.4.1", features = ["serde"] }
itertools = "0.14.0"
publicsuffix2 = "0.5.2"
reqwest = "0.12.23"
rustls = "0.23.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = "1.47.1"
url = "2.5.7"
webpki-roots = "1.0.2"
x509-parser = "0.18.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
